# BU-CS350

./: README.md
Prog1Bottcher_dbottch1/: generate.c  makefile  parse.c  parse.h  prog1generator  prog1sorter  sort.c
Prog2Bottcher_dbottch1/: makefile  parser.c  parser.h  prog2tree.c  simplefork.c
Prog3Bottcher_dbottch1/: README.md  et_data.csv  helper.cpp  helper.h  loop_data.csv  main.cpp  nolocal_data.csv  plot_hit_rates.plt  sample_data.csv
Prog4Bottcher_dbottch1/: README  main.cpp  makefile
Prog5Bottcher_dbottch1/: Block.cpp  Block.h  CMakeLists.txt  Drive.cpp  Drive.h  IMap.cpp  IMap.h  README  Segment.cpp  Segment.h  macros.cpp  macros.h  main.cpp  makefile
Prog5Bottcher_dbottch1/test_files/: episode_0  episode_1  manifesto_p1  manifesto_p2
